--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -14,7 +14,18 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           user: comethrusws
           template: classic
-          base: ""
+          base: header, activity, community, metadata
           config_timezone: Asia/Katmandu
           plugin_isocalendar: yes
-          plugin_isocalendar_duration: full-year
+          plugin_isocalendar_duration: half-year
+          plugin_activity: yes
+          plugin_activity_days: 14
+          plugin_activity_filter: all
+          plugin_activity_limit: 5
+          plugin_activity_load: 300
+          plugin_activity_visibility: all
+          plugin_languages: yes
+          plugin_languages_analysis_timeout: 15
+          plugin_languages_analysis_timeout_repositories: 7.5
+          plugin_languages_categories: markup, programming
+          plugin_languages_colors: github
