--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -19,10 +19,10 @@ jobs:
           plugin_isocalendar: yes
           plugin_isocalendar_duration: half-year
           plugin_activity: yes
-          plugin_activity_days: 14
-          plugin_activity_filter: all
-          plugin_activity_limit: 5
-          plugin_activity_load: 300
+          plugin_activity_days: 7  # Reduce from 14
+          plugin_activity_filter: issue, pr, review  # Be specific instead of 'all'
+          plugin_activity_limit: 3  # Reduce from 5
+          plugin_activity_load: 100  # Reduce from 300
           plugin_activity_visibility: all
           plugin_languages: yes
           plugin_languages_analysis_timeout: 15
